--- a/app/src/main/res/layout/fragment_create_workout.xml
+++ b/app/src/main/res/layout/fragment_create_workout.xml
@@ -6,55 +6,55 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--<android.support.constraint.ConstraintLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content">-->
-
-        <!--<EditText-->
-            <!--android:id="@+id/workout_name"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:hint="Workout Name"-->
-            <!--android:layout_marginLeft="8dp"-->
-            <!--app:layout_constraintLeft_toLeftOf="parent"-->
-            <!--android:layout_marginRight="8dp"-->
-            <!--app:layout_constraintRight_toRightOf="parent"-->
-            <!--app:layout_constraintBottom_toBottomOf="parent"-->
-            <!--android:layout_marginBottom="8dp"-->
-            <!--app:layout_constraintTop_toTopOf="parent"-->
-            <!--android:layout_marginTop="8dp"-->
-            <!--android:layout_marginStart="8dp"-->
-            <!--android:layout_marginEnd="8dp" />-->
-
-        <!--<EditText-->
-            <!--android:id="@+id/workout_desc"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:hint="Workout Description"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/workout_name"-->
-            <!--android:layout_marginRight="8dp"-->
-            <!--app:layout_constraintRight_toRightOf="parent"-->
-            <!--android:layout_marginLeft="8dp"-->
-            <!--app:layout_constraintLeft_toLeftOf="parent"-->
-            <!--android:layout_marginStart="8dp"-->
-            <!--android:layout_marginEnd="8dp" />-->
-
-    <!--</android.support.constraint.ConstraintLayout>-->
-    
-    <android.support.v7.widget.CardView
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <!--Need to implement the fragment on this activity for it to work-->
-        <fragment
-            android:id="@+id/exercise_list_fragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:name="com.example.gleative.workit.fragments.AddExerciseFragment"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:layout="@layout/fragment_exercise_list" />
+        <EditText
+            android:id="@+id/workout_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Workout Name"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintVertical_bias="0.202" />
 
-    </android.support.v7.widget.CardView>
+        <EditText
+            android:id="@+id/workout_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Workout Description"
+            app:layout_constraintTop_toBottomOf="@+id/workout_name"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
+
+        <Button
+            android:id="@+id/create_workout_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add Exercises"
+            android:layout_marginTop="181dp"
+            app:layout_constraintTop_toBottomOf="@+id/workout_desc"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_bias="0.502" />
+
+    </android.support.constraint.ConstraintLayout>
+
 
 
 
