--- a/app/src/main/res/layout/list_workout.xml
+++ b/app/src/main/res/layout/list_workout.xml
@@ -25,7 +25,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_weight="1">
             <!--Weight makes the size of the object bigger-->
             <TextView
                 android:id="@+id/workout_title"
@@ -48,6 +49,23 @@
                 android:text="Main muscle"/>
 
             </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_delete"/>
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_edit"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
