--- a/app/src/main/res/layout/list_workout.xml
+++ b/app/src/main/res/layout/list_workout.xml
@@ -56,11 +56,13 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/img_delete_workout"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_delete"/>
 
             <ImageView
+                android:id="@+id/img_edit_workout"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_edit"/>
