--- a/app/src/main/res/layout/fragment_create_custom_exercise.xml
+++ b/app/src/main/res/layout/fragment_create_custom_exercise.xml
@@ -1,93 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.gleative.workit.CreateCustomExerciseActivity"
-    tools:layout_editor_absoluteY="25dp"
-    tools:layout_editor_absoluteX="0dp">
+    android:orientation="vertical"
+    tools:context="com.example.gleative.workit.CreateCustomExerciseActivity">
+
+    <!--<ImageView-->
+        <!--android:id="@+id/selected_exercise_picture"-->
+        <!--android:layout_width="368dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:src="@drawable/e12_1"-->
+        <!--tools:layout_editor_absoluteY="0dp"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginRight="8dp"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--android:layout_marginLeft="8dp"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent" />-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/selected_exercise_name"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Exercise Name"-->
+        <!--android:layout_marginTop="8dp"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/selected_exercise_picture"-->
+        <!--android:layout_marginRight="8dp"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--android:layout_marginLeft="8dp"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent" />-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/selected_exercise_body_part"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Body Part"-->
+        <!--android:layout_marginTop="8dp"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/selected_exercise_name"-->
+        <!--android:layout_marginRight="8dp"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--android:layout_marginLeft="8dp"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent" />-->
+
+    <!--<EditText-->
+        <!--android:id="@+id/sets"-->
+        <!--android:layout_width="50dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:hint="Sets"-->
+        <!--android:inputType="number"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginTop="8dp"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/selected_exercise_body_part"-->
+        <!--android:layout_marginLeft="8dp"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--android:layout_marginRight="8dp"-->
+        <!--app:layout_constraintRight_toRightOf="parent" />-->
+
+    <!--<EditText-->
+        <!--android:id="@+id/reps"-->
+        <!--android:layout_width="50dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:hint="Reps"-->
+        <!--android:inputType="number"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginTop="8dp"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/sets"-->
+        <!--android:layout_marginRight="8dp"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--android:layout_marginLeft="8dp"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent" />-->
+
+    <!--<Button-->
+        <!--android:id="@+id/add_custom_exercise"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Add Exercise"-->
+        <!--android:onClick="addCustomExerciseToWorkout"-->
+        <!--android:layout_marginTop="173dp"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/reps"-->
+        <!--android:layout_marginRight="8dp"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--android:layout_marginLeft="8dp"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent" />-->
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <!--Lager en toolbar-->
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_execise_name"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+        <!--Linje 25 gjør at baren på toppen går vekk når du scroller-->
+    </android.support.design.widget.AppBarLayout>
 
     <ImageView
         android:id="@+id/selected_exercise_picture"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/e12_1"
-        tools:layout_editor_absoluteY="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginTop="5dp"
+        android:layout_gravity="center"
+        android:src="@drawable/e12_1" />
 
-    <TextView
-        android:id="@+id/selected_exercise_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Exercise Name"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/selected_exercise_picture"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+    <!--<TextView-->
+        <!--android:id="@+id/selected_exercise_name"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:text="Exercise Name"-->
+        <!--android:layout_marginTop="8dp"/>-->
 
     <TextView
         android:id="@+id/selected_exercise_body_part"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:text="Body Part"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/selected_exercise_name"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginTop="8dp" />
 
     <EditText
         android:id="@+id/sets"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:hint="Sets"
-        android:inputType="number"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/selected_exercise_body_part"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:inputType="number" />
 
     <EditText
         android:id="@+id/reps"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:hint="Reps"
-        android:inputType="number"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/sets"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:inputType="number"/>
 
     <Button
         android:id="@+id/add_custom_exercise"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Exercise"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:background="@color/colorRed"
+        android:textColor="#ffffff"
+        android:text="add exercise"
         android:onClick="addCustomExerciseToWorkout"
-        android:layout_marginTop="173dp"
-        app:layout_constraintTop_toBottomOf="@+id/reps"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_gravity="bottom|center"/>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
 
 
